--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fake-exec",
+  "name": "@heropa/fake-exec",
   "version": "1.1.0",
   "description": "Fake child_process#exec output",
   "main": "index.js",
